# Tonix

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_mac.sh  build_win.bat
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
cmake/: AAXCodesign.p12  BINARY_LICENSE.txt  BINARY_README.txt  FetchLicenses.cmake  JUCE_LICENSE.txt  Packager.cmake  aaxsigncert.pfx
